Small tweaks to the make readme.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@442 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/make/readme
+++ b/dom/make/readme
@@ -40,8 +40,7 @@ Build targets
 
 all: The default target, used for building libs/exes.
 
-test: Run the automated test suite. Make sure that project=all or
-project=domTest.
+test: Run the automated test suite. If any of the tests fail, make will fail.
 
 install: Install the DOM on the host machine. Set prefix=/my/path to specify an
 install prefix other than the default. On Linux, the default is /usr/local (libs
@@ -66,6 +65,8 @@ Build _only_ dae.cpp:
 	make file=dae.cpp
 Build with output messages (perhaps for debugging the makefiles): 
 	make verbose=yes
+Install to the default location:
+	make install
 
 
 Overriding the defaults
